log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 08:57:54 PM UTC: 
 tests:  0|6
total_score: 0/70
5da1276
Thu 30 Mar 2023 09:27:22 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
a75288c
Thu 30 Mar 2023 09:27:58 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
32ddc15
Thu 30 Mar 2023 09:28:21 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
afc29e9
Thu 30 Mar 2023 09:29:57 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
f89fc88
Thu 30 Mar 2023 09:31:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7226718
Thu 30 Mar 2023 09:32:26 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:48: error: ‘capacity’ undeclared (first use in this function)
   18 |     nuevo->data = (void *) malloc(sizeof(void)*capacity);
      |                                                ^~~~~~~~
arraylist.c:18:48: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1527b64
Thu 30 Mar 2023 09:32:41 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
17ef1dd
Thu 30 Mar 2023 09:32:58 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
3fbea50
Thu 30 Mar 2023 09:34:18 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d83b527
Thu 30 Mar 2023 09:34:27 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
703326a
Thu 30 Mar 2023 09:40:40 PM UTC: 
 arraylist.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:23:8: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   23 |     if(size == capacity){
      |        ^~~~
      |        dysize
arraylist.c:23:8: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:23:16: error: ‘capacity’ undeclared (first use in this function)
   23 |     if(size == capacity){
      |                ^~~~~~~~
Compilation failed
9a4e6a4
Thu 30 Mar 2023 09:40:54 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
2f4eafc
Thu 30 Mar 2023 09:41:31 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:20: error: ‘Array’ undeclared (first use in this function)
   25 |         l->data = (Array List **) realloc(l->data,l->capacity);
      |                    ^~~~~
arraylist.c:25:20: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:25:25: error: expected ‘)’ before ‘List’
   25 |         l->data = (Array List **) realloc(l->data,l->capacity);
      |                   ~     ^~~~~
      |                         )
arraylist.c:25:34: error: expected ‘;’ before ‘realloc’
   25 |         l->data = (Array List **) realloc(l->data,l->capacity);
      |                                  ^~~~~~~~
      |                                  ;
Compilation failed
3924147
Thu 30 Mar 2023 09:49:42 PM UTC: 
 arraylist.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:17: error: assignment to ‘void **’ from incompatible pointer type ‘ArrayList **’ {aka ‘struct ArrayList **’} [-Werror=incompatible-pointer-types]
   25 |         l->data = (ArrayList **) realloc(l->data,l->capacity);
      |                 ^
arraylist.c: In function ‘push’:
arraylist.c:38:17: error: assignment to ‘void **’ from incompatible pointer type ‘ArrayList **’ {aka ‘struct ArrayList **’} [-Werror=incompatible-pointer-types]
   38 |         l->data = (ArrayList **) realloc(l->data,l->capacity);
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
1b9e12c
Thu 30 Mar 2023 09:50:47 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
c835eef
Thu 30 Mar 2023 09:51:44 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
3f338df
Thu 30 Mar 2023 09:54:15 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f954ea6
Thu 30 Mar 2023 09:54:31 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
49787ef
Thu 30 Mar 2023 10:00:17 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
31c04fd
Thu 30 Mar 2023 10:02:17 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
3086913
Thu 30 Mar 2023 10:02:40 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/70
c21e6f2
Thu 30 Mar 2023 10:03:38 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d42f6c2
